# market-insight

./: .gitignore  .prettierignore  .prettierrc.js  AGENTS.md  tailwind.config.js
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
server/: API.md  README.md  main.py  pyproject.toml
server/app/: __init__.py
server/app/config/: __init__.py  settings.py
server/app/constants/: __init__.py  enums.py  strategies.py  theme_config.py
server/app/core/: __init__.py  context.py  exception.py  logger.py  middleware.py  response.py
server/app/data/csv/: market_turnover.csv
server/app/modules/: router.py
server/app/modules/basic/: router.py  service.py
server/app/modules/basic/api/: fetch_fund_kline.py  fetch_fund_snapshot.py  fetch_fund_top_holdings.py  fetch_index_kline_by_tx.py  fetch_kline_by_tx.py  fetch_market_turnover.py  fetch_search_stocks.py  fetch_stock_main_finance.py  fetch_ths_kline.py
server/app/modules/basic/schema/: request.py  response.py
server/app/modules/setting/: router.py  service.py
server/app/modules/setting/schema/: request.py  response.py
server/app/modules/skill/: router.py  service.py
server/app/modules/skill/schema/: request.py  response.py
server/app/modules/strategy/: router.py  service.py
server/app/modules/strategy/schema/: request.py  response.py
server/app/utils/: candle.py  time.py  tool.py  trend.py
src/components/: PageShell.jsx
src/pages/: HomePage.jsx  HtmlEffectivenessPage.jsx
src/routes/: AppRoutes.jsx
src/utils/: pages.js
(+108 files in other folders)
