[project]
name = "market-insight"
version = "0.1.0"
description = "个人回测系统与数据服务"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2.6",
  "akshare>=1.11",
  "httpx>=0.27",
  "loguru>=0.7",
  "pandas>=2.2",
  "python-dotenv>=1.0",
  "pendulum>=2.1",
  "scalar-fastapi>=1.4.4",
  "aiocache>=0.12.3",
  "pandas-ta",
  "polars>=1.36.0",
  "pyarrow>=22.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [".venv", "artifacts", "build", "dist", ".git", ".mypy_cache", ".ruff_cache"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "SIM"]
ignore = [
  "E203",
  "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true
force-sort-within-sections = true
order-by-type = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
lines-between-types = 0

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]
